--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -46,9 +46,9 @@
       </span>
       <div class="col s2 right-align">
         <button class="btn-floating btn-small red">
-          <i class="material-icons">remove</i>
+          <i class="material-icons" (click)="deleteTask(task)">remove</i>
         </button>
-        <button class="btn-floating btn-small green ml-5">
+        <button class="btn-floating btn-small green ml-5" (click)="markTaskAsDone(task)">
           <i class="material-icons">check</i>
         </button>
       </div>
